# MemEvo

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
src/algorithms/base/: algorithm.py
src/algorithms/full_context/: algorithm.py  prompt.py
src/configs/: everos.example.toml  full_contex.example.toml  full_context.example.toml  mem0.example.toml
src/datasets/: locomo.py
src/memevo/: __init__.py
src/memevo/algorithms/: __init__.py
src/memevo/algorithms/base/: __init__.py  algorithm.py
src/memevo/algorithms/everos/: __init__.py  algorithm.py  prompt.py  rerank.py
src/memevo/algorithms/full_context/: __init__.py  algorithm.py  prompt.py
src/memevo/algorithms/mem0/: __init__.py  algorithm.py  prompt.py
src/memevo/datasets/: __init__.py  base.py  locomo.py
src/memevo/utils/: __init__.py  models.py  progress.py  runner.py  utils.py
src/utils/: clients.py  utils.py
tests/: test_algorithms.py  test_everos.py  test_framework.py  test_full_context.py  test_locomo.py  test_models.py  test_registry.py  test_runner.py  test_utils.py
