[project]
name = "memevo"
version = "0.1.0"
description = "A lightweight framework for benchmarking conversational memory systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "everos==1.1.2",
    "mem0ai==2.0.11",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "spacy>=3.7.0",
    "tqdm>=4.67.0",
]

[project.scripts]
memevo = "memevo.utils.runner:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
